[package]
name = "env-test-util"
description = "Just a simple tool to manipulate environment variable in tests."
repository = "https://github.com/jdrouet/env-test-util"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
